Fix table overflow style.css

--- a/style.css
+++ b/style.css
@@ -143,6 +143,10 @@ tbody tr td:first-child{
     font-style: italic;
 }
 
+#schedule .wrapper {
+    overflow: auto;
+}
+
 /* Gallery Section */
 #gallery img {
     width: 30%;
